[add]フラッシュメッセージ

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -37,10 +37,10 @@ ja:
     failure:
       already_authenticated: すでにログインしています。
       inactive: アカウントが有効化されていません。メールに記載された手順にしたがって、アカウントを有効化してください。
-      invalid: "%{authentication_keys}またはパスワードが違います。"
+      invalid: ユーザー名またはパスワードが違います。
       last_attempt: もう一回誤るとアカウントがロックされます。
       locked: アカウントはロックされています。
-      not_found_in_database: "%{authentication_keys}またはパスワードが違います。"
+      not_found_in_database: ユーザー名またはパスワードが違います。
       timeout: セッションがタイムアウトしました。もう一度ログインしてください。
       unauthenticated: ログインもしくはアカウント登録してください。
       unconfirmed: メールアドレスの本人確認が必要です。
@@ -113,8 +113,8 @@ ja:
       already_signed_out: 既にログアウト済みです。
       new:
         sign_in: ログイン
-      signed_in: ""
-      signed_out: ""
+      signed_in: ログインしました。
+      signed_out: ログアウトしました。
     shared:
       links:
         back: 戻る
